// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button can have focus 1`] = `
<button
  class="sc-bcXHqe cDdZot"
  type="button"
>
  Button
</button>
`;

exports[`Button should render a large button 1`] = `
<button
  class="sc-bcXHqe bpLNUr"
  type="button"
>
  Button
</button>
`;

exports[`Button should render a medium button 1`] = `
<button
  class="sc-bcXHqe cDdZot"
  type="button"
>
  Button
</button>
`;

exports[`Button should render a primary button 1`] = `
<button
  class="sc-bcXHqe cDdZot"
  type="button"
>
  Button
</button>
`;

exports[`Button should render a secondary button 1`] = `
<button
  class="sc-bcXHqe iSdlUo"
  type="button"
>
  Button
</button>
`;

exports[`Button should render a small button 1`] = `
<button
  class="sc-bcXHqe ciwrzE"
  type="button"
>
  Button
</button>
`;

exports[`Button should render a submit button 1`] = `
<button
  class="sc-bcXHqe cDdZot"
  type="submit"
>
  Button
</button>
`;

exports[`Button should render correctly 1`] = `
<button
  class="sc-bcXHqe cDdZot"
  type="button"
>
  Button
</button>
`;
